# kiko-flux2-prompt-builder

./: README.md  flux2-prompt-node-v2.html  pyproject.toml
app/: package-lock.json  server.js  start.sh  stop.sh
app/public/data/: cameras.json  styles.json
app/public/js/: app.js
nodes/: prompt_builder_node.py
web/: kikoPromptBuilder.js
web/data/: mood.json  presets.json
