[project]
name = "kiko-prompt-builder"
description = "A visual prompt builder ComfyUI custom node for structured JSON prompt generation. Build photography-style prompts with camera settings, lighting, composition, and color palettes. Compatible with FLUX (Black Forest Labs), z-image, and other JSON-prompt models."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = [
    "# Core dependencies for Kiko Prompt Builder",
    "# Note: This node has minimal dependencies - most are included with ComfyUI",
    "# Already included with Python standard library:",
    "# - json",
    "# - pathlib",
    "# - typing",
    "# - copy",
    "# No additional dependencies required for basic functionality",
    "# Development dependencies (optional):",
    "# pytest>=6.0.0                # For running tests",
    "# black>=22.0.0                # For code formatting",
    "# flake8>=4.0.0                # For linting",
    "# mypy>=0.910                  # For type checking"
]

[project.urls]
Repository = "https://github.com/ComfyAssets/kiko-flux2-prompt-builder"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kiko9"
DisplayName = "Kiko Prompt Builder"
Icon = "https://avatars.githubusercontent.com/u/213204677?s=200"
